fix: add add-container align-items as baseline

--- a/client/src/app/components/auth/moderator-add-panel/moderator-add-panel.component.scss
+++ b/client/src/app/components/auth/moderator-add-panel/moderator-add-panel.component.scss
@@ -1,8 +1,8 @@
 #add-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: calc(100% - 40px);
-  height: calc(100% - 3000px);
 }
 
 .add-subcontainer {
@@ -29,6 +29,7 @@
     #add-container {
         flex-direction: row;
         justify-content: center;
+        align-items: baseline;
         min-width: 800px;
       }
 }
@@ -37,6 +38,7 @@
   #add-container {
     flex-direction: row;
     justify-content: center;
+    align-items: baseline;
     min-width: 800px;
   }
   .add-subcontainer{
